# guitarra

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: development.md  installation.md  requirements.md  tab-completion.md  usage.md
src/guitarra/: blues.py  cli.py  scales.py
tests/: test_blues.py  test_metronome.py  test_scales.py
