[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guitarra"
version = "0.1.0"
description = "A CLI tool for guitar practice"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.scripts]
guitar = "guitarra.cli:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
