[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guitarra"
version = "0.1.0"
description = "A CLI tool for guitar practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.scripts]
guitar = "guitarra.cli:main"

[tool.ruff]
line-length = 119
lint.select = ["E", "F", "I", "N", "W", "UP"]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
]
